--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         </div>
 
         <div class="error" v-if="error">
-            <h2>
-                ERROR
+            <h4>
+                ERROR!
                 <br>
                 digita almeno 5 caratteri
-            </h2>
+            </h4>
         </div>
 
 
