--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>todo List</h1>
 
         <div class="new-task">
-            <input type="text" v-model="newText" @keyup.enter="addTask" placeholder="scivi qui"/>
+            <input type="text" v-model="newText" @keyup.enter="addTask" placeholder="scrivi qui"/>
             <button @click="addTask">aggiungi</button>
         </div>
 
